<?xml version="1.0"?>
<package format="2">
  <name>vl53l0x</name>
  <version>1.0.4</version>
  <description>The vl53l0x package</description>

  <maintainer email="sgemme7@gmail.com">Sebastien Gemme</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vl53l0x_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>vl53l0x_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vl53l0x_msgs</exec_depend>

</package>
