<?xml version="1.0"?>
<package format="3">
  <name>vl53l0x</name>
  <version>1.2.1</version>
  <description>The vl53l0x package</description>

  <maintainer email="sgemme@protonmail.com">Sebastien Gemme</maintainer>

  <license>BSD</license>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>vl53l0x_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vl53l0x_msgs</exec_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>

</package>
