<?xml version="1.0"?>
<package format="3">
  <name>vl53l0x_msgs</name>
  <version>1.2.1</version>
  <description>The vl53l0x_msgs package</description>

  <maintainer email="sgemme@protonmail.com">Sebastien Gemme</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
