<?xml version="1.0"?>
<package format="2">
  <name>vl53l0x_msgs</name>
  <version>1.2.2</version>
  <description>The vl53l0x_msgs package</description>

  <maintainer email="sgemme@protonmail.com">Sebastien Gemme</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
